--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "react": "15.3.0",
     "react-dom": "15.3.0",
     "react-hot-loader": "1.3.0",
+    "react-router": "^2.6.1",
     "style-loader": "0.13.1",
     "url-loader": "0.5.7",
     "webpack": "1.13.1"
