--- a/package.json
+++ b/package.json
@@ -37,11 +37,13 @@
     "json-loader": "^0.5.4",
     "json5-loader": "^0.6.0",
     "jsx-loader": "^0.13.2",
+    "material-ui": "^0.15.4",
     "node-libs-browser": "1.0.0",
     "react": "15.3.0",
     "react-dom": "15.3.0",
     "react-hot-loader": "1.3.0",
     "react-router": "^2.6.1",
+    "react-tap-event-plugin": "^1.0.0",
     "style-loader": "0.13.1",
     "url-loader": "0.5.7",
     "webpack": "1.13.1"
