--- a/package.json
+++ b/package.json
@@ -25,21 +25,22 @@
   },
   "homepage": "https://github.com/alicoding/react-webpack-babel#readme",
   "dependencies": {
+    "babel-core": "6.10.4",
+    "babel-loader": "6.2.4",
+    "babel-preset-es2015": "6.9.0",
+    "babel-preset-react": "6.11.1",
     "bootstrap": "3.3.7",
+    "copy-webpack-plugin": "^3.0.1",
+    "css-loader": "0.23.1",
+    "file-loader": "0.9.0",
     "json-loader": "^0.5.4",
     "json5-loader": "^0.6.0",
     "jsx-loader": "^0.13.2",
     "node-libs-browser": "1.0.0",
     "react": "15.3.0",
     "react-dom": "15.3.0",
-    "babel-core": "6.10.4",
-    "babel-loader": "6.2.4",
-    "babel-preset-es2015": "6.9.0",
-    "babel-preset-react": "6.11.1",
-    "copy-webpack-plugin": "^3.0.1",
-    "css-loader": "0.23.1",
-    "file-loader": "0.9.0",
     "react-hot-loader": "1.3.0",
+    "react-router": "^2.6.1",
     "style-loader": "0.13.1",
     "url-loader": "0.5.7",
     "webpack": "1.13.1"
